antigen-macros/tests/ui/immune_without_witness.stderr
error: #[immune] requires `witness = ...` (a test, proptest, lint reference, formal-verification proof, or phantom-type construction). A marker without proof is not a claim.
  --> tests/ui/immune_without_witness.rs:10:10
   |
10 | #[immune(DummyAntigen)]
   |          ^^^^^^^^^^^^
